<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lightyellow"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lightyellow"
        android:orientation="horizontal"
        android:padding="5dp">

        <!--
            android:checked="false":  不选中状态
            android:drawableTop="@drawable/main_rb_star":  灰色
            android:drawablePadding:设置间距
            android:gravity="center"  设置位置剧中
            android:button="@null"  设置不显示圆形的单选标志
        -->

        <RadioButton
            android:id="@+id/main_rb_star"
            style="@style/main_rb"
            android:checked="true"
            android:drawableTop="@drawable/main_rb_star"
            android:text="@string/label_star" />

        <RadioButton
            android:id="@+id/main_rb_parnter"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb_parnter"
            android:text="@string/label_parnter" />

        <RadioButton
            android:id="@+id/main_rb_luck"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb_luck"
            android:text="@string/label_luck" />

        <RadioButton
            android:id="@+id/main_rb_me"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb_me"
            android:text="@string/label_me" />
    </RadioGroup>

    <!--
        中间部份他用布局进行占位（用线性布局进行占位），会去使用Frament替换这块布局。
        android:layout_below：在什么的下面
        android:layout_above： 在什么的上面
    -->
    <LinearLayout
        android:id="@+id/main_layout_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_rg"
        android:layout_below="@id/main_tv_title"
        android:orientation="vertical" />

</RelativeLayout>