<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgyellow"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- 男生设置：
        引用设置好的背景 :android:background="@drawable/parnter_man" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/parnter_man"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/man"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/parnterfrag_iv_man"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/parnterfrag_sp_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2" />

    </LinearLayout>

    <!--    女生设置：-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/parnter_woman"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/woman"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/parnterfrag_iv_woman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/parnterfrag_sp_woman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2" />
    </LinearLayout>

    <!--
        文字设置：在value文件中设置好，在此引用即可：ndroid:text="@string/parnter_info"
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/parnter_info"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/parnter_btn_prize"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:background="@drawable/dock"
        android:id="@+id/parnterfrag_btn_prize"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/parnter_btn_analysis"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/dock"
        android:id="@+id/parnterfrag_btn_analysis"/>


</LinearLayout>